<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".edit_profile.EditProfileFragment">

    <!-- Toolbar -->

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray_v4"
        app:layout_constraintTop_toBottomOf="@id/toolbar_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/agent_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/agent_profile_image"
                    app:cardCornerRadius="37dp"
                    app:cardElevation="4dp"
                    app:strokeColor="@color/primary_color"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:elevation="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/man" />
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/img_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:backgroundTint="#B9D1FF"
                        android:text="@string/edit"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_edit"
                        app:iconTint="@color/primary_color" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/img_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:backgroundTint="#FFABAB"
                        android:text="@string/remove"
                        android:textColor="#C62828"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Update Button -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resetButtonCardView"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/primary_color"
        app:strokeWidth="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/primary_color"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:insetTop="0dp"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:cornerRadius="25dp" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Scroll View for form -->
    <ScrollView
        android:id="@+id/form_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_card"
        app:layout_constraintBottom_toTopOf="@id/resetButtonCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray_v4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="16dp"
                android:text="@string/personal_details"
                android:textColor="@color/gray_v3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Name Field -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/gray_v3"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeWidth="0dp"
                app:endIconDrawable="@drawable/ic_edit"
                app:endIconMode="custom"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/ibrahim"
                    android:textColor="@color/gray_v3"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Field -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/gray_v3"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeWidth="0dp"
                app:endIconDrawable="@drawable/ic_edit"
                app:endIconMode="custom"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/email_ex"
                    android:textColor="@color/gray_v3"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- City Field -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/city"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCity"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:spinnerMode="dialog" />

                <View
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="2dp"
                    android:background="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityDropdownLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="@color/primary_color"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp"
                    app:endIconDrawable="@drawable/ic_edit"
                    app:endIconMode="custom"
                    app:endIconTint="@color/black">

                    <AutoCompleteTextView
                        android:id="@+id/cityDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:inputType="none"
                        android:text="@string/city_ex"
                        android:textColor="@color/gray_v3"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Phone Number Field -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primary_color"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCountryCode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="0dp"
                        android:text="@string/_20"
                        android:textColor="@color/gray_v3" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="1dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="2dp"
                    android:background="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColorHint="@color/primary_color"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp"
                    app:endIconDrawable="@drawable/ic_edit"
                    app:endIconMode="custom"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:text="@string/Phone_ex"
                        android:textColor="@color/gray_v3"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_v4" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>